# copoware-casio-ct-638

./: Cargo.toml  Casio CT-638-keyboard-matrix-map.ods  README.md
MIDI Converter/: MIDI Converter-B_Cu.gbr  MIDI Converter-Edge_Cuts.gbr  MIDI Converter.drl  MIDI Converter.kicad_pcb  MIDI Converter.kicad_prl  MIDI Converter.kicad_pro  MIDI Converter.kicad_sch  forge.yaml  fp-info-cache  fp-lib-table
src/: main.rs  midi.rs
