[package]
name = "copoware-casio-ct-638"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = {path = "../embassy/embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp = {path = "../embassy/embassy-rp", features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-futures = { path = "../embassy/embassy-futures" }
embassy-sync = { path = "../embassy/embassy-sync", features = ["defmt"] }
embassy-usb = { version = "0.1.0", path = "../embassy/embassy-usb", features = ["defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
debug = true
